--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy":"gh-pages -d build",
+    "predeploy":"yarn run build"
   },
   "eslintConfig": {
     "extends": [
@@ -29,6 +31,7 @@
       "react-app/jest"
     ]
   },
+  "homepage":"https://mandy0529.github.io/membership-practice",
   "browserslist": {
     "production": [
       ">0.2%",
